--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0"
   }
